--- a/20230831/周报.md
+++ b/20230831/周报.md
@@ -18,7 +18,7 @@
 
 **在二维参数空间，实现下列算法，并比较它们对参数的影响。**
 
-**关于参数的函数为：$f = 0.1*w_1^2 + 2*w_2^2$  **
+**关于参数的函数为：$f = 0.1*{w_{1}}^{2} + 2*{w_{2}}^{2}$  **
 
 1 Root Mean Square Propagation 算法实现
 
